Adjust the project structure

--- a/readme
+++ b/readme
@@ -1,1 +1,1 @@
-pdf engine test
+所有图片 *.emf;*.wmf;*.jpg;*.jpeg;*.jfif;*.jpe;*.png;*.bmp;*.dib;*.rle;*.gif;*.emz;*.wmz;*.tif;*.tif;*.svg;*.ico;*.webp
